# linkml-tutorial

./: .cruft.json  .linkmllint.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
A/: index.html
Animal/: index.html
AnimalCollection/: index.html
B/: index.html
Boolean/: index.html
Breeds/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Event/: index.html
Float/: index.html
ForProfit/: index.html
Integer/: index.html
MedicalEvent/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
NonProfit/: index.html
Objectidentifier/: index.html
Organization/: index.html
Person/: index.html
PersonCollection/: index.html
PersonInfo/: index.html
PersonStatus/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age/: index.html
age_in_years/: index.html
animals/: index.html
birth_date/: index.html
breed/: index.html
color/: index.html
description/: index.html
entries/: index.html
examples/: Person-001.yaml  README.md
gender/: index.html
handedness/: index.html
has_medical_history/: index.html
id/: index.html
linkml-tutorial/: index.html
linkml-tutorial-schema/: index.html
name/: index.html
pets/: index.html
primary_email/: index.html
search/: search_index.json
species/: index.html
tests/: __init__.py  test_data.py
types/: index.html
(+39 files in other folders)
