[tool.poetry]
name = "linkml_tutorial"
version = "0.1.0"
description = "A repostitory that walks through schema generation. "
authors = ["LinkML Team <admin@linkml.org>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/linkml_tutorial/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.dev-dependencies]
linkml = "^1.3.3"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]